sfdx-source/apex-di/main/objects/DI_Module__mdt/DI_Module__mdt.object-meta.xml
<CustomObject>
    <description>Defines Apex DI modules selected by metadata. Global modules are loaded automatically; local modules are installed only through an explicit metadata module import or reference.</description>
    <label>DI Module</label>
    <pluralLabel>DI Modules</pluralLabel>
</CustomObject>