sfdx-source/apex-di/main/objects/DI_Module__mdt/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Fully qualified class name of the module selected by this metadata alias (for example, &apos;LoggerModule&apos; or &apos;OuterClass.ConfigModule&apos;).</description>
    <label>Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>