sfdx-source/apex-di/main/objects/DI_Module__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional documentation describing why this metadata module alias exists and where it should be used.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>