sfdx-source/apex-di/main/objects/DI_Module__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether this metadata module can be loaded.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>