sfdx-source/apex-di/main/objects/DI_Module__mdt/fields/IsGlobal__c.field-meta.xml
<CustomField>
    <fullName>IsGlobal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Registers the module globally and makes its exported providers available without explicit imports.</description>
    <label>Is Global</label>
    <type>Checkbox</type>
</CustomField>